--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
+<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="marely" />
@@ -30,19 +30,18 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="assets/css/style.css" />
-		<link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="assets/img/name.png" type="image/x-icon" />
 		<title>Suricata</title>
 	</head>
 	<body>
-		<div class="container-fluid">
-		<nav class="navbar navbar-expand-md px-5 px-lg-5">
+		<nav class="navbar navbar-expand-md px-5">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">
 					<img id="logo-suricata" src="assets/img/logo.png" alt="Avatar Logo" />
 				</a>
 				<button
 					class="navbar-toggler border border-1 text-white-50"
-					type="button" 
+					type="button"
 					data-bs-toggle="collapse"
 					data-bs-target="#collapsibleNavbar">
 					<span class="fa fa-bars text-white"></span>
@@ -62,6 +61,132 @@
 				</div>
 			</div>
 		</nav>
+
+		<h1 class="font-bold-700">Nuestros Productos</h1>
+		<div class="row">
+			<!-- CARDs 1-->
+			<div class="card col-md-4 shadow" style="width: 18rem">
+				<img src="assets/img/colaciones.jpg" class="card-img-top" alt="..." />
+				<div class="card-body">
+					<h5 class="card-title">Colaciones</h5>
+					<p class="card-text">
+						Some quick example text to build on the card title and make up the
+						bulk of the card's content.
+					</p>
+				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item">An item</li>
+					<li class="list-group-item">A second item</li>
+				</ul>
+				<div class="card-body">
+					<a href="#" class="card-link">Ver más</a>
+					<a href="#" class="card-link">Comprar</a>
+				</div>
+			</div>
+			<!-- CARDs 2-->
+			<div class="card col-md-4 shadow" style="width: 18rem">
+				<img src="assets/img/desayunos.jpg" class="card-img-top" alt="..." />
+				<div class="card-body">
+					<h5 class="card-title">Desayunos</h5>
+					<p class="card-text">
+						Some quick example text to build on the card title and make up the
+						bulk of the card's content.
+					</p>
+				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item">An item</li>
+					<li class="list-group-item">A second item</li>
+				</ul>
+				<div class="card-body">
+					<a href="#" class="card-link">Ver más</a>
+					<a href="#" class="card-link">Comprar</a>
+				</div>
+			</div>
+			<!-- CARDs 3-->
+			<div class="card col-md-4 shadow" style="width: 18rem">
+				<img src="assets/img/bebidas.jpg" class="card-img-top" alt="..." />
+				<div class="card-body">
+					<h5 class="card-title">Bebidas</h5>
+					<p class="card-text">
+						Some quick example text to build on the card title and make up the
+						bulk of the card's content.
+					</p>
+				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item">An item</li>
+					<li class="list-group-item">A second item</li>
+				</ul>
+				<div class="card-body">
+					<a href="#" class="card-link">Ver más</a>
+					<a href="#" class="card-link">Comprar</a>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<!-- CARDs 4-->
+			<div class="card col-md-4 shadow" style="width: 18rem">
+				<img src="assets/img/verduras.jpg" class="card-img-top" alt="..." />
+				<div class="card-body">
+					<h5 class="card-title">Verduras</h5>
+					<p class="card-text">
+						Some quick example text to build on the card title and make up the
+						bulk of the card's content.
+					</p>
+				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item">An item</li>
+					<li class="list-group-item">A second item</li>
+				</ul>
+				<div class="card-body">
+					<a href="#" class="card-link">Ver más</a>
+					<a href="#" class="card-link">Comprar</a>
+				</div>
+			</div>
+			<!-- CARDs 5-->
+			<div class="card col-md-4 shadow" style="width: 18rem">
+				<img src="assets/img/dulces.jpg" class="card-img-top" alt="..." />
+				<div class="card-body">
+					<h5 class="card-title">Dulces</h5>
+					<p class="card-text">
+						Some quick example text to build on the card title and make up the
+						bulk of the card's content.
+					</p>
+				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item">An item</li>
+					<li class="list-group-item">A second item</li>
+				</ul>
+				<div class="card-body">
+					<a href="#" class="card-link">Ver más</a>
+					<a href="#" class="card-link">Comprar</a>
+				</div>
+			</div>
+			<!-- CARDs 6-->
+			<div class="card col-md-4 shadow" style="width: 18rem">
+				<img src="assets/img/empanadas.jpg" class="card-img-top" alt="..." />
+				<div class="card-body">
+					<h5 class="card-title">Empanadas</h5>
+					<p class="card-text">
+						Some quick example text to build on the card title and make up the
+						bulk of the card's content.
+					</p>
+				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item">An item</li>
+					<li class="list-group-item">A second item</li>
+					<!-- <li class="list-group-item">A third item</li> -->
+				</ul>
+				<div class="card-body">
+					<a href="#" class="card-link">Ver más</a>
+					<a href="#" class="card-link">Comprar</a>
+				</div>
+			</div>
+
+			<footer class="row">
+				<div class="col-12">
+					<img src="assets/img/logo-footer.png" alt="logo-suricata" />
+				</div>
+			</footer>
 		</div>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
