--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<title>Suricata</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-md px-5">
+		<nav class="navbar navbar-expand-sm">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">
 					<img id="logo-suricata" src="assets/img/logo.png" alt="Avatar Logo" />
@@ -63,15 +63,14 @@
 		</nav>
 
 		<h1 class="font-bold-700">Nuestros Productos</h1>
-		<div class="row">
+		<div class="row row-cols-auto">
 			<!-- CARDs 1-->
-			<div class="card col-md-4 shadow" style="width: 18rem">
+			<div class="card shadow">
 				<img src="assets/img/colaciones.jpg" class="card-img-top" alt="..." />
 				<div class="card-body">
 					<h5 class="card-title">Colaciones</h5>
 					<p class="card-text">
-						Some quick example text to build on the card title and make up the
-						bulk of the card's content.
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 					</p>
 				</div>
 				<ul class="list-group list-group-flush">
@@ -84,7 +83,7 @@
 				</div>
 			</div>
 			<!-- CARDs 2-->
-			<div class="card col-md-4 shadow" style="width: 18rem">
+			<div class="card shadow">
 				<img src="assets/img/desayunos.jpg" class="card-img-top" alt="..." />
 				<div class="card-body">
 					<h5 class="card-title">Desayunos</h5>
@@ -103,7 +102,7 @@
 				</div>
 			</div>
 			<!-- CARDs 3-->
-			<div class="card col-md-4 shadow" style="width: 18rem">
+			<div class="card shadow">
 				<img src="assets/img/bebidas.jpg" class="card-img-top" alt="..." />
 				<div class="card-body">
 					<h5 class="card-title">Bebidas</h5>
@@ -121,10 +120,8 @@
 					<a href="#" class="card-link">Comprar</a>
 				</div>
 			</div>
-		</div>
-		<div class="row">
 			<!-- CARDs 4-->
-			<div class="card col-md-4 shadow" style="width: 18rem">
+			<div class="card shadow">
 				<img src="assets/img/verduras.jpg" class="card-img-top" alt="..." />
 				<div class="card-body">
 					<h5 class="card-title">Verduras</h5>
@@ -143,7 +140,7 @@
 				</div>
 			</div>
 			<!-- CARDs 5-->
-			<div class="card col-md-4 shadow" style="width: 18rem">
+			<div class="card shadow">
 				<img src="assets/img/dulces.jpg" class="card-img-top" alt="..." />
 				<div class="card-body">
 					<h5 class="card-title">Dulces</h5>
@@ -162,7 +159,7 @@
 				</div>
 			</div>
 			<!-- CARDs 6-->
-			<div class="card col-md-4 shadow" style="width: 18rem">
+			<div class="card shadow">
 				<img src="assets/img/empanadas.jpg" class="card-img-top" alt="..." />
 				<div class="card-body">
 					<h5 class="card-title">Empanadas</h5>
@@ -174,20 +171,30 @@
 				<ul class="list-group list-group-flush">
 					<li class="list-group-item">An item</li>
 					<li class="list-group-item">A second item</li>
-					<!-- <li class="list-group-item">A third item</li> -->
 				</ul>
 				<div class="card-body">
 					<a href="#" class="card-link">Ver más</a>
 					<a href="#" class="card-link">Comprar</a>
 				</div>
 			</div>
-
-			<footer class="row">
-				<div class="col-12">
-					<img src="assets/img/logo-footer.png" alt="logo-suricata" />
-				</div>
-			</footer>
 		</div>
+		<section class="payment-card-section">
+			<p>Ahora aceptamos</p>
+
+			<i class="fa-brands fa-cc-visa"></i>
+			<i class="fa-brands fa-cc-mastercard"></i>
+			<i class="fa-brands fa-cc-amex"></i>
+			<i class="fa-brands fa-cc-diners-club"></i>
+			<i class="fa-brands fa-cc-paypal"></i>
+			<i class="fa-brands fa-cc-discover"></i>
+		</section>
+
+		<footer class="">
+			<div class="">
+				<img src="assets/img/logo-footer.png" alt="logo-suricata" />
+			</div>
+		</footer>
+
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
