--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="marely" />
-		<!-- Open Sans Regular 400 -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth@0,75..100;1,75..100&display=swap"
-			rel="stylesheet" />
-		<!-- Open Sans Bold 700 -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,700;1,75..100,700&display=swap"
-			rel="stylesheet" />
+		<!-- Open Sans -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 		<!-- bootstrap 5.3 -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -63,129 +55,11 @@
 		</nav>
 
 		<h1 class="open-sans-700">Nuestros Productos</h1>
-		<div class="row row-cols-auto">
-			<!-- CARDs 1-->
-			<div class="card shadow">
-				<img src="assets/img/colaciones.jpg" class="card-img-top" alt="..." />
-				<div class="card-body">
-					<h5 class="card-title">Colaciones</h5>
-					<div id="text-p1" class="text-card">
-						<p>Sed ut perspiciatis unde omnis iste natus error sit</p>
-						<div class="more-text">
-							<p>
-								voluptatem accusantium doloremque laudantium, totam rem aperiam,
-								eaque ipsa quae ab illo inventore veritatis et quasi architecto
-								beatae vitae dicta sunt explicabo.
-							</p>
-						</div>
-					</div>
-				</div>
-				<ul class="list-group list-group-flush">
-					<li class="list-group-item">An item</li>
-					<li class="list-group-item">A second item</li>
-				</ul>
-				<div class="card-body">
-					<a href="#text-p1">Ver más</a>
-					<a href="#text-p1">ocultar</a>
-					<a href="#" class="card-link">Comprar</a>
-				</div>
-			</div>
-			<!-- CARDs 2-->
-			<div class="card shadow">
-				<img src="assets/img/desayunos.jpg" class="card-img-top" alt="..." />
-				<div class="card-body">
-					<h5 class="card-title">Desayunos</h5>
-					<p class="card-text">
-						Some quick example text to build on the card title and make up the
-						bulk of the card's content.
-					</p>
-				</div>
-				<ul class="list-group list-group-flush">
-					<li class="list-group-item">An item</li>
-					<li class="list-group-item">A second item</li>
-				</ul>
-				<div class="card-body">
-					<a href="#" class="card-link">Ver más</a>
-					<a href="#" class="card-link">Comprar</a>
-				</div>
-			</div>
-			<!-- CARDs 3-->
-			<div class="card shadow">
-				<img src="assets/img/bebidas.jpg" class="card-img-top" alt="..." />
-				<div class="card-body">
-					<h5 class="card-title">Bebidas</h5>
-					<p class="card-text">
-						Some quick example text to build on the card title and make up the
-						bulk of the card's content.
-					</p>
-				</div>
-				<ul class="list-group list-group-flush">
-					<li class="list-group-item">An item</li>
-					<li class="list-group-item">A second item</li>
-				</ul>
-				<div class="card-body">
-					<a href="#" class="card-link">Ver más</a>
-					<a href="#" class="card-link">Comprar</a>
-				</div>
-			</div>
-			<!-- CARDs 4-->
-			<div class="card shadow">
-				<img src="assets/img/verduras.jpg" class="card-img-top" alt="..." />
-				<div class="card-body">
-					<h5 class="card-title">Verduras</h5>
-					<p class="card-text">
-						Some quick example text to build on the card title and make up the
-						bulk of the card's content.
-					</p>
-				</div>
-				<ul class="list-group list-group-flush">
-					<li class="list-group-item">An item</li>
-					<li class="list-group-item">A second item</li>
-				</ul>
-				<div class="card-body">
-					<a href="#" class="card-link">Ver más</a>
-					<a href="#" class="card-link">Comprar</a>
-				</div>
-			</div>
-			<!-- CARDs 5-->
-			<div class="card shadow">
-				<img src="assets/img/dulces.jpg" class="card-img-top" alt="..." />
-				<div class="card-body">
-					<h5 class="card-title">Dulces</h5>
-					<p class="card-text">
-						Some quick example text to build on the card title and make up the
-						bulk of the card's content.
-					</p>
-				</div>
-				<ul class="list-group list-group-flush">
-					<li class="list-group-item">An item</li>
-					<li class="list-group-item">A second item</li>
-				</ul>
-				<div class="card-body">
-					<a href="#" class="card-link">Ver más</a>
-					<a href="#" class="card-link">Comprar</a>
-				</div>
-			</div>
-			<!-- CARDs 6-->
-			<div class="card shadow">
-				<img src="assets/img/empanadas.jpg" class="card-img-top" alt="..." />
-				<div class="card-body">
-					<h5 class="card-title">Empanadas</h5>
-					<p class="card-text">
-						Some quick example text to build on the card title and make up the
-						bulk of the card's content.
-					</p>
-				</div>
-				<ul class="list-group list-group-flush">
-					<li class="list-group-item">An item</li>
-					<li class="list-group-item">A second item</li>
-				</ul>
-				<div class="card-body">
-					<a href="#" class="card-link">Ver más</a>
-					<a href="#" class="card-link">Comprar</a>
-				</div>
-			</div>
+		<div id="productos" class="row row-cols-auto">
+		
+			<!-- aqui van las cards -->
 		</div>
+
 		<section class="payment-card-section">
 			<div>
 				<p class="text-white">Ahora aceptamos</p>
@@ -203,10 +77,11 @@
 		<footer class="">
 			<img src="assets/img/logo-footer.png" alt="logo-suricata" />
 		</footer>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 			crossorigin="anonymous"></script>
+		<script src="assets/js/script.js"></script>
 	</body>
 </html>
